--- a/03_setup_k8s_platform/full_install.yml
+++ b/03_setup_k8s_platform/full_install.yml
@@ -4,6 +4,11 @@
   hosts: localhost
   gather_facts: false
 
+- name: Add Jetstack Repo
+  community.kubernetes.helm_repository:
+    repo_name: jetstack
+    repo_url: "https://charts.jetstack.io"
+
 # import further playbooks
 - import_playbook: deploy_postgres_operator.yml
 - import_playbook: deploy_minio_operator.yml
