--- a/03_setup_k8s_platform/configure_prerequisites.yml
+++ b/03_setup_k8s_platform/configure_prerequisites.yml
@@ -1,7 +1,12 @@
 ---
 # file: 03_setup_k8s_platform/configure_prerequisites.yml
 
-- name: Add Jetstack Repo
-  community.kubernetes.helm_repository:
-    repo_name: jetstack
-    repo_url: "https://charts.jetstack.io"
+- name: Setup full_install prerequisites
+  hosts: localhost
+  gather_facts: false
+
+  tasks:
+  - name: Add Jetstack Repo
+    community.kubernetes.helm_repository:
+      repo_name: jetstack
+      repo_url: "https://charts.jetstack.io"
