--- a/03_setup_k8s_platform/deploy_timescale.yml
+++ b/03_setup_k8s_platform/deploy_timescale.yml
@@ -85,7 +85,7 @@
     - name: Create timescale extension
       command: |
         kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
-          exec -it {{ timescale.cluster_team }}-{{ timescale.cluster_name }}-0
+          exec {{ timescale.cluster_team }}-{{ timescale.cluster_name }}-0
           -- bash -c "psql -U {{ postgres.super_username }} -d quantumleap -c 'CREATE EXTENSION IF NOT EXISTS timescaledb;'"
       register: result
       until: result.rc == 0
