--- a/03_setup_k8s_platform/deploy_frost_playbook.yml
+++ b/03_setup_k8s_platform/deploy_frost_playbook.yml
@@ -143,12 +143,12 @@
     - name: Create PostGIS extension
       command: |
         kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
-          exec -it {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-0
-          -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION postgis;'"
+          exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-0
+          -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'"
       register: result
       until: result.rc == 0
-      retries: 10
-      delay: 5
+      retries: 20
+      delay: 30
       changed_when: True
 
     - name: Get password of user sensorthings, created by Zalando operator
