update helm module

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,6 +121,7 @@ deploy_staging_platform:
     - mkdir -p /root/.kube
     - scp acn@$STAGING_TARGET_HOST:/home/acn/.kube/kubeconfig_txl_staging /root/.kube/kubeconfig_txl_staging
     - head -1 /root/.kube/kubeconfig_txl_staging
+    - ansible-galaxy collection install community.kubernetes
     - ansible-playbook -i inventory -l localhost 03_setup_k8s_platform/full_install.yml
   when: manual
   stage: staging
