--- a/03_setup_k8s_platform/deploy_frost_playbook.yml
+++ b/03_setup_k8s_platform/deploy_frost_playbook.yml
@@ -141,14 +141,26 @@
                 memory: 500Mi
 
     - name: Create PostGIS extension
-      command: |
-        kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
-          exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-0
-          -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'"
-      register: result
-      until: result.rc == 0
-      retries: 20
-      delay: 30
+      block:
+        - name: Try cluster-0 resource
+          command: |
+            kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
+              exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-0
+              -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'"
+          register: result
+          until: result.rc == 0
+          retries: 5
+          delay: 20
+      rescue:
+        - name: Try cluster-1 resource
+          command: |
+            kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
+              exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-1
+              -- bash -c "psql -U {{ postgres.super_username }} -d {{ frost.frost_db_database }} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'"
+          register: result
+          until: result.rc == 0
+          retries: 5
+          delay: 20
       changed_when: True
 
     - name: Get password of user sensorthings, created by Zalando operator
