--- a/03_setup_k8s_platform/deploy_frost_playbook.yml
+++ b/03_setup_k8s_platform/deploy_frost_playbook.yml
@@ -142,7 +142,7 @@
 
     - name: Create PostGIS extension
       block:
-        - name: Try cluster-0 resource
+        - name: _Create PostGIS extension_ Try cluster-0 resource
           command: |
             kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
               exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-0
@@ -153,7 +153,7 @@
           delay: 20
           changed_when: True
       rescue:
-        - name: Try cluster-1 resource
+        - name: _Create PostGIS extension_ Try cluster-1 resource
           command: |
             kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
               exec {{ postgis.cluster_team }}-{{ postgis.cluster_name }}-1
