--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_9_scaling.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_9_scaling.yml
@@ -11,3 +11,7 @@
     state: present
   loop:
     - "{{ lookup('template', 'templates/keycloak/deployment/keycloak.yaml') | from_yaml_all | list }}"
+
+- name: Wait for Keylcoak Start-Up
+  wait_for:
+    timeout: 180
