--- a/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-configmap.yaml
+++ b/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: keycloak_messages_de
+  name: keycloak-messages-de
 data:
   messages_de.properties: |
     emailVerificationSubject=E-Mail verifizieren
