--- a/03_setup_k8s_platform/templates/keycloak/deployment/keycloak.yaml
+++ b/03_setup_k8s_platform/templates/keycloak/deployment/keycloak.yaml
@@ -47,7 +47,7 @@ spec:
   volumes:
     - name: messages_de
       configMap:
-        name: keycloak_messages_de
+        name: keycloak-messages-de
 
 # ---
 
