--- a/03_setup_k8s_platform/templates/keycloak/deployment/keycloak.yaml
+++ b/03_setup_k8s_platform/templates/keycloak/deployment/keycloak.yaml
@@ -33,6 +33,12 @@ spec:
             secretKeyRef:
               key: MASTER_PASSWORD
               name: '{{ IDM_ADMIN_K8S_SECRET_NAME }}'
+      volumes:
+        defaultMode: 0777
+        items:
+          - name: messages-de
+            mountPath: /opt/jboss/keycloak/themes/base/email/messages/messages_de.properties
+            subPath: messages_de.properties
     resources:
       limits:
         cpu: 1500m
@@ -40,14 +46,6 @@ spec:
       requests:
         cpu: 750m
         memory: 750Mi
-    volumeMounts:
-      - name: messages_de
-        mountPath: /opt/jboss/keycloak/themes/base/email/messages/messages_de.properties
-        subPath: messages_de.properties
-  volumes:
-    - name: messages_de
-      configMap:
-        name: keycloak-messages-de
 
 # ---
 
