linter fix naming

--- a/02_setup_k8s/tasks/01_user_setup.yml
+++ b/02_setup_k8s/tasks/01_user_setup.yml
@@ -34,7 +34,8 @@
     msg: "Could not reach target host."
   when: "root_login.unreachable is defined and not ('Permission denied' in root_login.msg)"
 
-- debug:
+- name: Debug unreachable error
+  debug:
     msg:
       - "Could not log in with root user. This is probably since you already configured the user 'acn'."
       - "If this is not the case, please check if root login is allowed on your target host and that the root password is correct."
