--- a/02_setup_k8s/tasks/02_prepare_system.yml
+++ b/02_setup_k8s/tasks/02_prepare_system.yml
@@ -11,7 +11,7 @@
 # Install required Python modules
 - name: Install required Python modules
   pip: name={{ item }}
-  loop: [ 'PyYAML','openshift']
+  loop: [ 'PyYAML', 'openshift==0.11.2', 'jmespath', 'docker', psycopg2-binary, 'kubernetes==11.0']
 
 # Configure ufw
 - name: Set logging
@@ -87,3 +87,5 @@
 # Disable Swap
 - name: Disable Swap
   command: swapoff -a
+  register: disableswap
+  changed_when: disableswap.rc != 0
