--- a/03_setup_k8s_platform/deploy_context_management_stack.yml
+++ b/03_setup_k8s_platform/deploy_context_management_stack.yml
@@ -9,7 +9,7 @@
     - name: Verify MongoDB credentials are set
       ansible.builtin.fail:
         msg: "ERROR: inventory variable {{ item.key | upper }} is not set."
-      when: item.value  == ""
+      when: item.value|length  == 0
       with_items:
        - { key: CMS_MONGO_INITDB_DATABASE, value: "{{ lookup('vars', 'CMS_MONGO_INITDB_DATABASE') }}"}
        - { key: CMS_MONGO_INITDB_ROOT_USERNAME, value: "{{ lookup('vars', 'CMS_MONGO_INITDB_ROOT_USERNAME') }}" }
@@ -29,7 +29,7 @@
       ansible.builtin.set_fact:
         k8s_config: "{{ default.K8S_KUBECONFIG }}"
         k8s_context: "{{ default.K8S_CONTEXT }}"
-        k8s_namespace: "{{ default.K8S_NAMESPACE_CONTEXT_MANAGEMENT_STACK | lower}}"
+        k8s_namespace: "{{ default.K8S_NAMESPACE_CONTEXT_MANAGEMENT_STACK | lower }}"
       tags: always
 
     # 1. Create namespace for CM stack
