--- a/03_setup_k8s_platform/tasks/dataflow-stack/07_switch_lights.yml
+++ b/03_setup_k8s_platform/tasks/dataflow-stack/07_switch_lights.yml
@@ -25,7 +25,7 @@
     pv_path: "/var/snap/microk8s/common/default-storage"
 
 - name: Install NodeRed via Helm chart
-  kubernetes.core.helm:
+  helm:
     name: "{{ helm_release_name }}"
     # chart_ref: "{{ helm_repo_name }}/{{ helm_chart_name }}"
     chart_ref: "files/helmcharts/{{ helm_chart_name }}"
@@ -37,7 +37,7 @@
     values: "{{ lookup('template', 'templates/dataflow-stack/dataflow_nodered_values.yaml.j2') | from_yaml }}"
 
 - name: "Get Pod running {{ helm_release_name }}"
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ k8s_namespace }}"
@@ -52,7 +52,7 @@
   when: nodered_pod_info is defined
 
 - name: "Get infos about PVC {{ nodered_pvc }}"
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ k8s_namespace }}"
