--- a/02_setup_k8s/tasks/02_prepare_system.yml
+++ b/02_setup_k8s/tasks/02_prepare_system.yml
@@ -3,6 +3,7 @@
 # Update Repositories
 - name: Update apt cache
   raw: apt-get -y update
+  changed_when: False
 
 # Install Dependencies
 - name: Install required system packages
