--- a/02_setup_k8s/tasks/03_install_microk8s.yml
+++ b/02_setup_k8s/tasks/03_install_microk8s.yml
@@ -32,6 +32,7 @@
   shell: source /etc/profile.d/apps-bin-path.sh && microk8s.stop
   args:
     executable: /bin/bash
+  changed_when: False
 
 - name: Start Microk8s
   shell: source /etc/profile.d/apps-bin-path.sh && microk8s.start
