Issue 52: - inventory.default: Added new variable 'ENVIRONMENT'. This variable is used to select the proper Docker image, when deploying QGIS Server and Masterportal. - webgis_masterportal.yml: the value of 'image_tag' is now defined by the inventory variable 'ENVIRONMENT'. - webgis_qgisserver.yml: the value of of 'server_image_tag' is now defined by the inventory variable 'ENVIRONMENT'. - INSTALL.md: replaced '*.urban-data.cloud' with the generic 'your.domain'. - masterportal_values.yaml.j2: removed white-space.

--- a/03_setup_k8s_platform/vars/webgis_masterportal.yml
+++ b/03_setup_k8s_platform/vars/webgis_masterportal.yml
@@ -7,7 +7,7 @@ HELM_RELEASE_NAME: geodata-masterportal
 replicaCount: 1
 image_registry: "registry.gitlab.com/"
 image_repository: "registry.gitlab.com/berlintxl/futr-hub/platform/masterportal_customizing"
-image_tag: "webgis-masterportal"
+image_tag: "{{ ENVIRONMENT }}"
 image_pullPolicy: Always
 
 service_type: NodePort
