--- a/03_setup_k8s_platform/vars/webgis_qgisserver.yml
+++ b/03_setup_k8s_platform/vars/webgis_qgisserver.yml
@@ -18,7 +18,7 @@ nginx_cors_origin: "https://masterportal.{{ DOMAIN }}"
 server_replicaCount: 1
 server_image_registry: "registry.gitlab.com"
 server_image_repository: "berlintxl/futr-hub/platform/qgis-server-customizing"
-server_image_tag: "webgis-qgisserver"
+server_image_tag: "{{ ENVIRONMENT }}"
 server_image_pullPolicy: Always
 server_image_pullSecrets: "gitlab-registry"
 server_service_port: 5555
