--- a/03_setup_k8s_platform/vars/webgis_qgisserver.yml
+++ b/03_setup_k8s_platform/vars/webgis_qgisserver.yml
@@ -8,7 +8,7 @@ HELM_RELEASE_NAME: geodata-qgisserver
 QGIS_CUSTOM_GITLAB_PROJECT: "berlintxl/futr-hub/platform/qgis-server-customizing"
 
 # Helm sepcific settings
-qgis_data_dir: "/data/qgis"
+qgis_data_dir: "/data/qgis/wfsbasis"
 nginx_default_conf: "/etc/nginx/conf.d/"
 nginx_qgis_conf: "qgis-nginx.conf"
 nginx_server_name: "mapserver.{{ DOMAIN }}"
