--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,21 +145,21 @@ deploy_staging_ckan:
   when: manual
   stage: staging
   environment:
-    name: "Deploy Staging Platform"
+    name: "Deploy Staging CKAN"
   artifacts:
     paths:
       - .facts/
     expire_in: never
     when: on_success
 
-deploy_staging_ckan:
+deploy_staging_qgis_server:
   script:
     - *prepare_deploy_staging
     - ansible-playbook -i inventory -l localhost 03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
   when: manual
   stage: staging
   environment:
-    name: "Deploy Staging Platform"
+    name: "Deploy Staging QGIS Server"
   artifacts:
     paths:
       - .facts/
