--- a/03_setup_k8s_platform/deploy_grafana.yml
+++ b/03_setup_k8s_platform/deploy_grafana.yml
@@ -42,12 +42,17 @@
 
     - name: Get timescale credentials
       k8s_info:
-        namespace: '{{ default.K8S_NAMESPACE_DATA_MANAGEMENT | lower }}'
+        namespace: '{{ default.K8S_NAMESPACE_DATA_MANAGEMENT }}'
         kubeconfig: '{{ default.K8S_KUBECONFIG }}'
         context: '{{ default.K8S_CONTEXT }}'
         kind: Secret
         name: 'postgres.{{ quantumleap.timescale_service }}.credentials.postgresql.acid.zalan.do'
       register: timescale_credentials
+
+    - name: Store timescale credentials
+      set_fact:
+        TIMESCALE_PASSWORD: "{{ timescale_credentials.resources[0].data.password | b64decode }}"
+        cacheable: yes
 
     - name: Install Helm package with values loaded from template
       community.kubernetes.helm:
