--- a/03_setup_k8s_platform/deploy_minio_tenant.yml
+++ b/03_setup_k8s_platform/deploy_minio_tenant.yml
@@ -23,6 +23,15 @@
         k8s_context: "{{ default.K8S_CONTEXT }}"
         k8s_namespace: "{{ default.K8S_NAMESPACE_DATA_MANAGEMENT }}"
 
+    - name: Create a k8s namespace
+      community.kubernetes.k8s:
+        name: "{{ default.K8S_NAMESPACE_DATA_MANAGEMENT }}"
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        api_version: v1
+        kind: Namespace
+        state: present
+
     ## Secret to be used as MinIO Root Credentials
     - name: Deploy MinIO Root Credentials
       k8s:
